# sleepy_hollow

./: CLAUDE.md  Cargo.toml  README.md
examples/shader/: Cargo.toml
examples/shader/src/: main.rs  sample.rs
examples/shader/src/filter/: cubic.wgsl  lanczos.wgsl
src/: filter.rs  main.rs  simulator.rs
src/filter/: cubic.wgsl  gaussian.wgsl  lanczos.wgsl  shader.rs
