[package]
name = "sleepy_hollow"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
chrono = "0.4.39"
cosmic-text = "0.13.2"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = [
    "lazy",
    "advanced",
    "canvas",
    "tokio",
    "debug",
    "image",
    "wgpu",
    "svg",
] }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
image = "0.25.5"
palette = "0.7.6"
png = "0.17.16"
rand = "0.9.0"
reqwest = "0.12.15"
sipper = "0.1.0"
tokio = "1.44.1"

tracing-subscriber = "0.3.19"
