[package]
name = "sleepy_hollow"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
iced = { workspace = true }
sipper = { workspace = true }
iced_runtime = { workspace = true }
tracing-subscriber = "0.3.19"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
sleepy_hollow = { path = "." }

bytemuck = "1.22.0"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = [
    "lazy",
    "advanced",
    "canvas",
    "tokio",
    "debug",
    "image",
    "wgpu",
    "svg",
] }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
sipper = "0.1.0"
